# swing-trading-system

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.agents  Dockerfile.railway  Makefile  README.md  nixpacks.toml  pyrightconfig.json  pytest.ini  railway.toml  read-me.txt
backend/: Procfile  alembic.ini  config.py  main.py  nixpacks.toml  notify.py  pyproject.toml
backend/agents/: fin_models.py  financial_agent.py  models.py  orchestrator.py  pattern.py  scanner.py  sentiment.py  synthesizer.py  t1_store.py  t2_config.py  t2_news.py  t2_screener.py  t2_store.py  ta_agent.py
backend/api/: dependencies.py  schemas.py
backend/api/routes/: analytics.py  backtest.py  financials.py  paper_trades.py  portfolio.py  prices.py  stocks.py  strategy_settings.py  suggestions.py  t1_scans.py  t2_scans.py
backend/backtest/: run_backtest.py
backend/data/: alpha_vantage.py  fetcher.py  finnhub.py  ingest.py  universe.py  yahoo_screener.py
backend/db/: app_settings.py  models.py  seed.py  session.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 0001_initial_schema.py  0002_add_t1_scans.py  0002_add_t2_scans.py
backend/jobs/: agents_requirements.txt  health_check.py  ingest.py  intraday_update.py  requirements.txt  run_agents.py  run_t2_screen.py
backend/paper_trading/: engine.py  mark_to_market.py  outcomes.py  trade_manager.py
backend/risk/: entry_guards.py  market_pulse.py  position_sizing.py  regime.py  stop_target.py
backend/scheduler/: ingest_job.py  jobs.py  tasks.py
docs/: TECHNICAL_DOCUMENTATION.md
(+36 files in other folders)
