[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swing-trading-backend"
version = "0.1.0"
description = "AI-powered swing trading suggestion system — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    # API server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Agent orchestration
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-core>=0.2.0",
    "anthropic>=0.28.0",

    # Market data & technical analysis
    "yfinance>=0.2.38",
    "pandas>=2.2.0",
    "pandas-ta @ git+https://github.com/twopirllc/pandas-ta.git@development",
    "numpy>=1.26.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Validation & config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # Notifications
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.0",
    "ruff>=0.4.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
